codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__cyber_policy_error_event_narrow_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
ⓘ This content can't be shown
  This provider applies extra
  caution to cybersecurity
  requests. Contact your provider
  administrator if you believe
  access should be allowed.
