codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__safety_access_block_event_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
ⓘ This content can't be shown
  This provider applies extra caution to requests involving biological
  research and applications that could pose safety risks. Contact your
  provider administrator if you believe access should be allowed.
